--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "foro-react",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://aydeeqm.github.io/Foro-Redux",
+  "homepage": "https://aydeeqm.github.io/Foro-Redux",
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "redux-zero": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,5 +16,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
